# 695eb69866ad0b4a256fa7c4

./: README.md  app.py  app_factory.py  config_settings.py  documentation.md  notebook_specifications.md  requirements.txt  source.py  streamlit_specifications.md  test_app.py  user_guide.md
.github/workflows/: build_docker_and_push.yml
.streamlit/: config.toml
individual-air-platform/: pyproject.toml
