[tool.poetry]
name = "individual-air-platform"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{"include" = "air", "from" = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "*"
uvicorn = {"extras" = ["standard"], "version" = "*"}
pydantic = "*"
pydantic-settings = "*"
httpx = "*"
sse-starlette = "*"


[tool.poetry.group.dev.dependencies]
pytest = "*"
pytest-asyncio = "*"
pytest-cov = "*"
black = "*"
ruff = "*"
mypy = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
